--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="icon" href="images/sg1.png" sizes="300x300" type="image/png">
     <script src="scripts/script.js"></script>
     <title>Shivani-Portfolio</title>
 </head>
@@ -59,6 +60,10 @@
                 <h2>Skills</h2>
 
                 <section class="skill-item">
+                    <p>C</p> 
+                    <div class="container"> 
+                        <div class="skill java">80%</div> 
+                    </div> 
                     <p>JAVA</p> 
                     <div class="container"> 
                         <div class="skill java">80%</div> 
@@ -138,7 +143,7 @@
             </div>
         </section> -->
 
-        <footer id="contact">
+        <section id="contact">
             <div class="content-wrap social-icons">
                 <h2>Contact Details</h2>
                 <a href="https://www.linkedin.com/in/shivani-ganimukkula-4948a8157" class="fa fa-linkedin" style="font-size: 30px;"></a>
@@ -165,8 +170,20 @@
                         </div> 
                     </div> 
                 </div> 
+            </div>            
+        </section>
+
+        <footer>
+            <div class="visitor-count" >
+                <p>Copyright © 2021 All rights reserved | Shivani Ganimukkula</p>
+                <p>Visitors:</p>
+                <!-- <script type="text/javascript" src="http://services.webestools.com/cpt_visitors/68542-19-5.js"></script> -->
+                <a href="https://www.webfreecounter.com/" target="_blank">
+                <img src="https://www.webfreecounter.com/hit.php?id=gunfafn&nd=6&style=6" alt="visitor counter">
+                </a>
             </div>
         </footer>
+
     </main>
 
     
